<resources>
    <string name="app_name">Homepage</string>
    <string name="nama_pt">PT INDOCOM</string>
    <string name="nama_lokasi">Sleman</string>


    <string name="informasi">Informasi perubahan data katalog</string>
    <string name="pembaruan_akhir">Pembaruan terakhir</string>
    <string name="pembaruan_lanjut">Pembaruan selanjutnya</string>
    <string name="tgl_pembaruan_akhir">16–06–2022 15:00:01</string>
    <string name="tgl_pembaruan_lanjut">16–06–2022 15:00:01</string>


    <string name="katalog_tender">Katalog Tender</string>
    <string name="tender_tersimpan">Tender Tersimpan</string>
    <string name="laporan_statistik">Laporan Statistik</string>
    <string name="Pengaturan">Pengaturan</string>


</resources>